# docs/swagger.json
@@ -648,7 +648,7 @@
                 ],
                 "description": "update authenticated user profile",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -659,13 +659,22 @@
                 "summary": "Edit user profile",
                 "parameters": [
                     {
-                        "description": "profile payload",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.ProfileUpdateRequest"
-                        }
+                        "type": "string",
+                        "description": "full name",
+                        "name": "fullname",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "phone number",
+                        "name": "phone",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "file",
+                        "description": "profile photo",
+                        "name": "photo",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
@@ -905,20 +914,6 @@
                 "success": {
                     "type": "boolean",
                     "example": true
-                }
-            }
-        },
-        "dto.ProfileUpdateRequest": {
-            "type": "object",
-            "properties": {
-                "fullname": {
-                    "type": "string"
-                },
-                "phone": {
-                    "type": "string"
-                },
-                "photo": {
-                    "type": "string"
                 }
             }
         },
