# internal/controller/user.controller.go
@@ -7,8 +7,12 @@ import (
 	"backend-golang/pkg"
 	"backend-golang/pkg/utils"
 	"errors"
+	"fmt"
 	"log"
 	"net/http"
+	"path"
+	"path/filepath"
+	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/gin-gonic/gin/binding"
@@ -62,15 +66,17 @@ func (uc *UserController) GetProfile(ctx *gin.Context) {
 //	@Description	update authenticated user profile
 //	@Tags			user
 //	@Security		ApiKeyAuth
-//	@Accept			json
+//	@Accept			mpfd
 //	@Produce		json
-//	@Param			body	body		dto.ProfileUpdateRequest	true	"profile payload"
-//	@Success		200		{object}	dto.ProfileSwaggerResponse
-//	@Failure		400		{object}	dto.ErrorSwaggerResponse
-//	@Failure		401		{object}	dto.ErrorSwaggerResponse
-//	@Failure		404		{object}	dto.ErrorSwaggerResponse
-//	@Failure		409		{object}	dto.ErrorSwaggerResponse
-//	@Failure		500		{object}	dto.ErrorSwaggerResponse
+//	@Param			fullname	formData	string	false	"full name"
+//	@Param			phone		formData	string	false	"phone number"
+//	@Param			photo		formData	file	false	"profile photo"
+//	@Success		200			{object}	dto.ProfileSwaggerResponse
+//	@Failure		400			{object}	dto.ErrorSwaggerResponse
+//	@Failure		401			{object}	dto.ErrorSwaggerResponse
+//	@Failure		404			{object}	dto.ErrorSwaggerResponse
+//	@Failure		409			{object}	dto.ErrorSwaggerResponse
+//	@Failure		500			{object}	dto.ErrorSwaggerResponse
 //	@Router			/user/profile [put]
 func (uc *UserController) EditProfile(ctx *gin.Context) {
 	token, _ := ctx.Get("claims")
@@ -78,12 +84,51 @@ func (uc *UserController) EditProfile(ctx *gin.Context) {
 
 	var profile dto.ProfileUpdateRequest
 
-	if err := ctx.ShouldBindBodyWith(&profile, binding.JSON); err != nil {
-		utils.SendResponse(ctx, http.StatusBadRequest, false, "invalid request body", nil, err.Error())
+	if err := ctx.ShouldBindWith(&profile, binding.FormMultipart); err != nil {
+		utils.SendResponse(
+			ctx,
+			http.StatusBadRequest,
+			false,
+			"invalid request body",
+			nil,
+			err.Error(),
+		)
 		return
 	}
 
-	if err := uc.userService.EditProfile(ctx.Request.Context(), claims.Id, profile); err != nil {
+	if profile.Photo != nil {
+
+		ext := path.Ext(profile.Photo.Filename)
+
+		filename := fmt.Sprintf(
+			"profile_%d%s",
+			time.Now().UnixNano(),
+			ext,
+		)
+
+		dst := filepath.Join("public", "img", filename)
+
+		if err := ctx.SaveUploadedFile(profile.Photo, dst); err != nil {
+			utils.SendResponse(
+				ctx,
+				http.StatusInternalServerError,
+				false,
+				"edit profile failed",
+				nil,
+				err.Error(),
+			)
+			return
+		}
+
+		// kirim filepath ke service
+		profile.PhotoPath = dst
+	}
+
+	if err := uc.userService.EditProfile(
+		ctx.Request.Context(),
+		claims.Id,
+		profile,
+	); err != nil {
 
 		if errors.Is(err, errs.ErrPhoneAlreadyUsed) {
 			utils.SendResponse(ctx, http.StatusConflict, false, "edit profile failed", nil, err.Error())
@@ -104,5 +149,16 @@ func (uc *UserController) EditProfile(ctx *gin.Context) {
 		return
 	}
 
-	utils.SendResponse(ctx, http.StatusOK, true, "ok", profile, nil)
+	utils.SendResponse(
+		ctx,
+		http.StatusOK,
+		true,
+		"ok",
+		gin.H{
+			"fullname": profile.FullName,
+			"phone":    profile.Phone,
+			"photo":    profile.PhotoPath,
+		},
+		nil,
+	)
 }
