# internal/model/user.model.go
@@ -3,14 +3,15 @@ package model
 import "time"
 
 type User struct {
-	Id         int       `db:"id"`
-	Email      string    `db:"email"`
-	Password   string    `db:"password"`
-	Pin        string    `db:"pin"`
-	FullName   string    `db:"full_name"`
-	Photo      string    `db:"photo"`
-	Created_at time.Time `db:"created_at"`
-	Updated_at time.Time `db:"updated_at_at"`
+	Id        int       `db:"id"`
+	Email     string    `db:"email"`
+	Password  string    `db:"password"`
+	Pin       string    `db:"pin"`
+	FullName  string    `db:"full_name"`
+	Photo     string    `db:"photo"`
+	Phone     string    `db:"phone"`
+	CreatedAt time.Time `db:"created_at"`
+	UpdatedAt time.Time `db:"updated_at"`
 }
 
 type UserPIN struct {
